<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.CustDetailFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v7.widget.CardView
        android:id="@+id/CustDetailPhoto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardBackgroundColor="@android:color/holo_blue_dark"
        app:cardElevation="10dp"
        app:cardMaxElevation="100dp">

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/CustDetailCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/CustDetailPhoto"
        app:cardBackgroundColor="@color/titlecolor"
        app:cardElevation="10dp"
        app:contentPadding="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/background"
            android:orientation="vertical"
            android:padding="2dp"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:text="@string/customer_nameD"
                    android:textColor="@color/background"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/CustDetailName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="2dp"
                    android:padding="2dp"
                    android:text="@string/customer_name"
                    android:textAlignment="center"
                    android:textColor="@color/background"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:text="@string/address"
                    android:textColor="@color/background"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/CustDetailAddr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="2dp"
                    android:padding="2dp"
                    android:text="@string/addr"
                    android:textColor="@color/background"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:text="@string/phone_no"
                    android:textColor="@color/background"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/CustDetailPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="2dp"
                    android:padding="2dp"
                    android:text="@string/phone"
                    android:textColor="@color/background"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:text="@string/email"
                    android:textColor="@color/background"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/CustDetailEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="2dp"
                    android:padding="2dp"
                    android:text="@string/customers"
                    android:textColor="@color/background"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:text="@string/account_noD"
                    android:textColor="@color/background"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/CustDetailAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="2dp"
                    android:padding="2dp"
                    android:text="@string/account"
                    android:textColor="@color/background"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:text="@string/total_loans"
                    android:textColor="@color/background"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/CustDetailLoans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="2dp"
                    android:padding="2dp"
                    android:text="@string/loan"
                    android:textColor="@color/background"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/LoanBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="2dp"
                    android:backgroundTint="@color/background"
                    android:padding="1dp"
                    android:text="@string/view"
                    android:textColor="@color/titlecolor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/AddLoanBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:backgroundTint="@color/background"
                    android:padding="1dp"
                    android:text="Add Loan"
                    android:textColor="@color/titlecolor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>