<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    tools:context=".Fragments.CollectionFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v7.widget.CardView
        android:id="@+id/dateCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:cardBackgroundColor="@color/background"

        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ColHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="1dp"
                android:text="@string/agent_name"
                android:textAlignment="center"
                android:textColor="@color/titlecolor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ColEamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/agent_email"

                android:textAlignment="center"
                android:textColor="#E0E0E0"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/AgentDailyCsv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/background"
            android:text="@string/dailycsv"
            android:textAlignment="center"
            android:textColor="@color/titlecolor"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/AgentMonthCsv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/background"
            android:text="@string/monthlycsv"
            android:textAlignment="center"
            android:textColor="@color/titlecolor"
            android:textSize="14sp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/col_installment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="1dp"
            android:text="@string/installment_type"
            android:textAlignment="center"
            android:textColor="@color/background"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/AgentRadioGrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:textAlignment="center">

            <RadioButton
                android:id="@+id/radioDaily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:checked="true"
                android:text="@string/daily"
                android:textColor="@color/background" />

            <RadioButton
                android:id="@+id/radioMonthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/monthly"
                android:textColor="@color/background" />
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/installment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>