<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView
        android:id="@+id/DailyCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#37474F"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/DailyDateHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/date_of_collection"
                android:textColor="@color/titlecolor"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/DailyDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="1dp"
                android:padding="5dp"
                android:text="@string/date"
                android:textColor="@color/titlecolor"
                android:textSize="14sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/DailyTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="5dp"
            android:padding="1dp"
            android:text="@string/total"
            android:textColor="@color/titlecolor"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DailyAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="20dp"
            android:padding="2dp"
            android:text="@string/amount"
            android:textColor="@color/titlecolor"
            android:textSize="14sp" />

    </android.support.v7.widget.CardView>

</LinearLayout>