<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/CustHeadCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@android:color/holo_blue_dark"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/CustHeadName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="10dp"

                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:padding="1dp"
                android:text="@string/customer_name"
                android:textColor="@color/titlecolor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/CustHeadAddr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"

                android:layout_marginStart="20dp"
                android:layout_marginTop="1dp"
                android:padding="1dp"
                android:text="@string/customer_addr"
                android:textColor="@color/titlecolor"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/CustHeadAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"

            android:layout_marginStart="260dp"
            android:layout_marginTop="5dp"
            android:padding="1dp"
            android:text="@string/account_no"
            android:textColor="@color/titlecolor"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/CustHeadAccNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"

            android:layout_marginStart="260dp"
            android:layout_marginTop="20dp"
            android:padding="2dp"
            android:text="@string/account"
            android:textColor="@color/titlecolor"
            android:textSize="14sp" />


    </android.support.v7.widget.CardView>

</RelativeLayout>