<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView
        android:id="@+id/MonthlyCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#37474F"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/MonthlyMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="10dp"

                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:padding="1dp"
                android:text="@string/month_of_collection"
                android:textColor="@color/titlecolor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/MonthlyYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"

                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:padding="1dp"
                android:text="@string/year"
                android:textColor="@color/titlecolor"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/MonthlyTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"

            android:layout_marginStart="250dp"
            android:layout_marginTop="5dp"
            android:padding="1dp"
            android:text="@string/total"
            android:textStyle="bold"
            android:textColor="@color/titlecolor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/MonthlyAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"

            android:layout_marginStart="250dp"
            android:layout_marginTop="20dp"
            android:padding="2dp"
            android:text="@string/amount_paid"
            android:textColor="@color/titlecolor"
            android:textSize="14sp" />

    </android.support.v7.widget.CardView>

</LinearLayout>